--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+    knolleary/PubSubClient@^2.8
+    adafruit/DHT sensor library
+    adafruit/Adafruit Unified Sensor
